--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Ashwin-Profile</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -45,7 +45,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/ashwin/Screen Shot 2022-09-01 at 3.35.15 PM.png"
+          <img src="./assets/img/ashwin/Screen Shot 2022-09-01 at 3.35.15 PM.png"
             class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
@@ -243,7 +243,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.apple.com/careers/us/" target="_blank"><img alt="Apple logo"
-                    src="/assets/img/ashwin/apple_logo.png" class="responsive-img center-block" /></a>
+                    src="./assets/img/ashwin/apple_logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -280,7 +280,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.amazon.com" target="_blank"><img alt="Amazon logo"
-                    src="/assets/img/ashwin/Amazon_logo_2.svg" class="responsive-img center-block" /></a>
+                    src="./assets/img/ashwin/Amazon_logo_2.svg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -311,7 +311,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.persistent.com" target="_blank"><img alt="Persistent logo"
-                    src="/assets/img/ashwin/persistent_logo.png" class="responsive-img center-block" /></a>
+                    src="./assets/img/ashwin/persistent_logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
