--- a/index.html
+++ b/index.html
@@ -365,19 +365,36 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">DevOps Contractor</div>
+            <div class="role brown-text text-darken-2">Senior Software Enginner</div>
+            Senior Software – Data Engineer
             <ul>
-              <li>Implemented static code analysis recommendation rules in Java for python files to improve code
-                quality, application performance and detect code smells in repositories. The detection percentage of the
-                python rules was 78 % in the amazon GitHub repository.
-              </li>
-              <li>Incorporated unit test in JUnit cases to validate python rules.</li>
-              <li>Led junior software engineering interns and collaborated with the Amazon Codeguru Seattle team for proper implementation and
-                testing of python rules.</li>
+              <li>Implemented PII Data Masking and Obfuscation Pipeline using Python on client databases. Optimized data masking pipeline performance by 50% and obfuscated 450 GB of large data.</li>
+              <li>Ingested data from various data clusters using a combination of AWS Athena and AWS Glue to create data views to be used in BI tools.</li>
+              <li>Worked closely with ML solution architects for proper implementation of data-preprocessing pipeline and to derive insights from the data which could be further useful for the ML models.</li>
+              <li>Responsible for the creation of various dashboards on Tableau for data analytics.</li>
+            </ul>
+            <br>
+            Senior Software – ML Engineer
+            <ul>
+              <li>Responsible for deploying Facebook’s Deep Learning NMT Transformer model on torch-serve (open-source tool for serving PyTorch models) and created generalized custom handlers for all transformer models enabling fast and easy deployment of the model.</li>
+              <li>Responsible for deployment and testing of various Pytorch models on container technologies like Docker & Kubernetes.</li>
+              <li>Acted as a liaison between teams in Amazon-Sagemaker and Facebook ML teams for the proper deployment of the transformer model.</li>
+            </ul>
+            <br>
+            Software Engineer – Full Stack Developer
+            <ul>
+              <li>Implemented several time-critical features while migrating IBM users from mainframe-based to a distributed computing architecture.</li>
+              <li>Consistently deliver structured and maintainable front-end codes to build an intuitive user interface and reusable components on the React.js</li>
+              <li>Implemented REST services by Golang with microservices architecture.</li>
+              <li>Excellent knowledge of NO-SQL on Mongo and Cassandra DB and expertise in working with SpringlOC, SpringMVC, and SpringAOP.</li>
+              <li>Contributed to developing an event-driven and time-triggered report generation module using Java and Spring.</li>
+              <li>Leveraged Apache Spark for processing and aggregating high-volume historical data for generating reports.</li>
+              <li>Interacted with clients across various global locations like the USA, Canada, China, Australia.</li>
+              <li>Leveraged knowledge in Java, J2EE, Spring-MVC, Spring Boot, Golang, JavaScript, HTML, SQL, DOJO, Node.js, React.js</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>April 2021 - June 2022 | India - Remote </span>
+            <span>Oct 2017 - June 2021 | Nagpur, MH, India </span>
           </div>
         </div>
     </section>
