--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/Music image.webp"
+                <img alt="music streaming app" src="./assets/img/Music image.webp"
                   style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -463,7 +463,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/Sentiment Analysis.jpeg" style="height: 100%; width: 100%"
+                <img alt="quiz app" src="./assets/img/Sentiment Analysis.jpeg" style="height: 100%; width: 100%"
                   class="activator" />
               </div>
               <div class="card-content">
