--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               </h5>
               <h5>
                 <li>My interests lie in System Design, Machine Learning architecture, and Distributed Parallel Computing.</li>
-                <li> I am looking for an opportunity to work in core software development, ML/Data engineering, and related fields.:</li>
+                <li>I am looking for an opportunity starting May,2023 to work in core Software Development, ML/Data engineering, and related fields.</li>
               </h5>
             </div>
             <div class="social">
@@ -217,7 +217,7 @@
           </h2>
         </blockquote> -->
         <p>
-          I am a Computer Science Grad Student at University of Southern California.
+          I am a Computer Science grad student at University of Southern California.
         </p>
         <p>
         <ul>
@@ -228,13 +228,8 @@
           <li><b>Databases:</b> MySQL, Oracle, PostgreSQL, MongoDB, Cassandra, Amazon Redshift</li>
           <li><b>AWS Cloud Services:</b> EC2, RDS, IAM, S3, AWS Lambda, Athena, Glue, Step-Function, Sagemaker</li>
           <li><b>Tools:</b> Git, Docker, Kubernetes, AWS Cloud, Unity 3D</li>
-          <li><b>Mobile Development:</b> IOS Development, Swift, Dart</li>
+          <li><b>Mobile Development:</b> iOS Development, Swift, Dart</li>
         </ul>
-        </p>
-
-        <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering,
-          which provides professional development, interesting experiences and personal growth.
         </p>
       </div>
     </section>
@@ -518,10 +513,16 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/ashwin/java-2.png" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/ashwin/cpp2.svg" class="responsive-img" />C/C++
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/javascript.png" class="responsive-img" />JavaScript
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
@@ -530,7 +531,7 @@
                 <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="/assets/img/ashwin/mongo.png" class="responsive-img" />MongoDB
               </div>
             </div>
           </div>
@@ -540,6 +541,15 @@
           <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />Pytorch
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />Tensorflow
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+              </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
@@ -570,18 +580,6 @@
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
-              </div>
             </div>
           </div>
         </div>
@@ -591,55 +589,15 @@
           <div class="card-content">
             <h4 class="brown-text light">Other</h4>
             <div class="row text-center">
-
-
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
-              </div>
             </div>
           </div>
         </div>
-
-        <!-- certifications -->
-        <!-- <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Certificates</h4>
-            <div class="row text-left">
-              <div class="container">
-                <div class="row">
-                  <div class="col s12 m6 l6">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col s12 m6 l6">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
       </div>
     </section>
 
@@ -660,23 +618,22 @@
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science
                   <br>
-                  <b>CGPA: </b>-/4.0
+                  <b>CGPA: </b>- 3.7/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Algorithms</li>
-                    <li>Machine Learning</li>
-                    <li>Natural Language Processing</li>
-                    <li>Databases</li>
-                    <li>Web Technologies & Mobile Apps Development</li>
-                    <li>Information Retrieval & Web Search Engines</li>
-                    <li>Operating Systems</li>
+                    <li>CSCI 570 - Analysis of Algorithms</li>
+                    <li>DSCI 552 - Machine Learning</li>
+                    <li>CSCI 544 - Natural Language Processing</li>
+                    <li>CSCI 585 - Databases</li>
+                    <li>CSCI 571 - Web Technologies & Mobile Apps Development</li>
+                    <li>CSCI 572 - Information Retrieval & Web Search Engines</li>
+                    <li>CSCI 402 - Operating Systems</li>
                   </ul>
                   </p>
-
                 </ul>
               </div>
             </div>
@@ -695,7 +652,7 @@
                 <p>
                   <b>Degree: </b>Bachelor of Engineering in Computer Science and Engineering
                   <br>
-                  <b>CGPA: </b>-/4.0
+                  <b>CGPA: </b>- 9.35/10
                 </p>
 
                 <ul>
@@ -726,7 +683,7 @@
         <p>
           <a aria-label="Call Ashwin" data-position="top" data-tooltip="Call Ashwin"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Ashwin">Number</a></a>
+              aria-label="Call Ashwin">+1 (213) 551-4836</a></a>
         </p>
         <p>
           <a aria-label="Email Ashwin" href="mailto:ashwinchafale@gmail.com" target="_blank" data-position="top"
