--- a/index.html
+++ b/index.html
@@ -510,28 +510,28 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="./assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/ashwin/java-2.png" class="responsive-img" />Java
+                <img alt="" src="./assets/img/ashwin/java-2.png" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/ashwin/cpp2.svg" class="responsive-img" />C/C++
+                <img alt="" src="./assets/img/ashwin/cpp2.svg" class="responsive-img" />C/C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/javascript.png" class="responsive-img" />JavaScript
+                <img alt="" src="./assets/img/javascript.png" class="responsive-img" />JavaScript
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="./assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="./assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="./assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/ashwin/mongo.png" class="responsive-img" />MongoDB
+                <img alt="" src="./assets/img/ashwin/mongo.png" class="responsive-img" />MongoDB
               </div>
             </div>
           </div>
@@ -542,28 +542,28 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />Pytorch
+                <img alt="" src="./assets/img/pytorch-logo.png" class="responsive-img" />Pytorch
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />Tensorflow
+                <img alt="" src="./assets/img/tensorflow-logo-1.png" class="responsive-img" />Tensorflow
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="./assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="./assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="./assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="./assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                <img alt="" src="./assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="./assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
               </div>
             </div>
           </div>
@@ -575,10 +575,10 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                <img alt="" src="./assets/img/django-logo.webp" class="responsive-img" />Django
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+                <img alt="" src="./assets/img/flask-logo.png" class="responsive-img" />Flask
               </div>
             </div>
           </div>
@@ -590,10 +590,10 @@
             <h4 class="brown-text light">Other</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
+                <img alt="" src="./assets/img/git.png" class="responsive-img" />Git
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
+                <img alt="" src="./assets/img/aws.png" class="responsive-img" />AWS
               </div>
             </div>
           </div>
